examples/errors/comments-only.tw
# This file has no executable statements
# It will fail to compile
